[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/images/menus/menuBGDesat.png" type="Texture" id=1]
[ext_resource path="res://scenes/FreeplayMenu.gd" type="Script" id=2]

[node name="FreeplayMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AddNewSong" type="Button" parent="."]
margin_left = 1146.0
margin_top = 17.0
margin_right = 1264.0
margin_bottom = 46.0
focus_mode = 0
text = "Add a new song"

[node name="SongUtil" type="Panel" parent="."]
visible = false
margin_left = 773.0
margin_top = 62.0
margin_right = 1263.0
margin_bottom = 698.0

[node name="SongName" type="LineEdit" parent="SongUtil"]
margin_left = 14.0
margin_top = 9.0
margin_right = 481.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 126, 829 )
text = "Test"
placeholder_text = "Song Name"

[node name="CharacterIcon" type="LineEdit" parent="SongUtil"]
margin_left = 14.0
margin_top = 41.0
margin_right = 481.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 126, 829 )
text = "bf-pixel"
placeholder_text = "Character Icon"

[node name="DifficultyName" type="LineEdit" parent="SongUtil"]
margin_left = 14.0
margin_top = 73.0
margin_right = 330.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 126, 829 )
text = "normal"
placeholder_text = "Difficulty Name"

[node name="AddDiff" type="Button" parent="SongUtil/DifficultyName"]
margin_left = 324.0
margin_top = 2.0
margin_right = 394.0
margin_bottom = 22.0
text = "Add"

[node name="RemoveDiff" type="Button" parent="SongUtil/DifficultyName"]
margin_left = 396.0
margin_top = 2.0
margin_right = 466.0
margin_bottom = 22.0
text = "Remove"

[node name="BGColor" type="LineEdit" parent="SongUtil"]
margin_left = 14.0
margin_top = 106.0
margin_right = 481.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 126, 829 )
text = "#000000"
placeholder_text = "Background Color"

[node name="Difficulties" type="Label" parent="SongUtil"]
margin_left = 19.0
margin_top = 153.0
margin_right = 92.0
margin_bottom = 167.0
text = "Difficulties:"

[node name="ActuallyAddSong" type="Button" parent="SongUtil"]
margin_left = 373.0
margin_top = 596.0
margin_right = 478.0
margin_bottom = 624.0
text = "Add the song"

[node name="ResetNewSongData" type="Button" parent="SongUtil"]
margin_left = 261.0
margin_top = 596.0
margin_right = 366.0
margin_bottom = 624.0
text = "Reset data"

[node name="Error" type="Label" parent="SongUtil"]
visible = false
modulate = Color( 1, 0.360784, 0.360784, 1 )
margin_left = 32.0
margin_top = 225.0
margin_right = 466.0
margin_bottom = 256.0
text = "Song couldn't be added. Make sure the Song Name, Character Icons,
and difficulties aren't blank."
align = 1

[connection signal="pressed" from="AddNewSong" to="." method="_on_AddNewSong_pressed"]
[connection signal="pressed" from="SongUtil/DifficultyName/AddDiff" to="." method="_on_AddDiff_pressed"]
[connection signal="pressed" from="SongUtil/DifficultyName/RemoveDiff" to="." method="_on_RemoveDiff_pressed"]
[connection signal="pressed" from="SongUtil/ActuallyAddSong" to="." method="_on_ActuallyAddSong_pressed"]
